--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "md5": "^2.3.0",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
+    "request": "^2.88.2",
     "uuid": "^8.3.2"
   }
 }
